project(stringutils)

file(GLOB STRINGUTILS_HDERS ${stringutils_SOURCE_DIR}/*.hpp)
file(GLOB STRINGUTILS_SRC ${stringutils_SOURCE_DIR}/*.cpp)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

add_library(stringutils STATIC ${STRINGUTILS_SRC})
